--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<link rel="icon" type="image/png" href="img/favicon/favicon-16x16.png" sizes="16x16">
 	<link rel="manifest" href="img/favicon/manifest.json">
 	<link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
-	<link rel="shortcut icon" href="img/favicon/favicon.ico">
+	<link rel="shortcut icon" href="img/favicon/favicon-32x32.png">
 	<meta name="msapplication-TileColor" content="#66e0e5">
 	<meta name="msapplication-TileImage" content="img/favicon/mstile-144x144.png">
 	<meta name="msapplication-config" content="img/favicon/browserconfig.xml">
